# repo_synopsis_app

./: .coverage  .early.json  Directory Synopsis Application.docx  My Repo Synopsis - Updates.txt  README.md  directory_tree-repo_synopsis_app.txt  event_log.txt  prompt_&_directory_tree-repo_synopsis_app.txt  public_repo_plan.md  pyproject.toml  repo_synopsis.json  requirements.txt  setup.py  streamlit_app.py
repo_synopsis.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt
src/repo_synopsis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/streamlit_app/: streamlit_app.py
src/streamlit_app/test_early_streamlit_app/: test_early_generate_directory_tree.py  test_early_generate_synops  test_early_generate_synopsis_text.py  test_early_get_file_language.py  test_early_get_llm_response.py  test_early_get_summarizer.py  test_early_handle_directory_error.py  test_early_log_event.py  test_early_main.py  test_early_process_repo.py  test_early_save_synopsis.py  test_early_summarize_text.py  test_early_traverse_directory.py
src/test_app/: simple_app.py  test_app.py
src/test_app/__pycache__/: test_app.cpython-313-pytest-8.3.4.pyc.12244
