# pyproject.toml

[project]
name = "repo_synopsis"
version = "0.1.0"
dependencies = ["streamlit"]
requires-python = ">= 3.13.0"
authors = [ {name = "Alex Jensen", email = "thanotosq@gmail.com"}, ]
description = "my description"
readme = "README.md"
license = {text = "MIT"}
keywords = ["streamlit", "python"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python"
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"